# gpu-hire

./: .env.example  .gitignore  CLAUDE.md  README.md  TEST.md  pyproject.toml
docs/: autodl-provider-design.md  development-plan.md  gpu-rental-research.md
gpu_hire/: __init__.py
gpu_hire/mcp/: server.py
gpu_hire/providers/: base.py
gpu_hire/providers/autodl/: client.py  constants.py  provider.py  ssh_runner.py
tests/: test_autodl_client.py  test_autodl_provider.py  test_mcp_tools.py
