[project]
name = "gpu-hire"
version = "0.1.0"
description = "GPU rental automation via MCP Server — let AI agents rent GPUs and submit jobs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "mcp>=1.0",
]

[project.scripts]
gpu-hire = "gpu_hire.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
